--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -69,6 +69,14 @@ body {
         flex-wrap: wrap;
         position: relative;
 
+        @media(max-width: 576px) {
+            margin: var(--space-5) 0;
+
+            button[type="submit"] {
+                width: 100%;
+            }
+        }
+
         &__container {
             position: relative;
             width: 100%;
@@ -232,6 +240,32 @@ body {
             min-width: 0;
         }
 
+        @media(max-width: 992px) {
+            flex-direction: column;
+
+            .weather {
+                &__main {
+                    flex-direction: column;
+
+                    .weather__location {
+                        align-items: center;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+
+        @media (max-width: 576px) {
+            .weather {
+                &__details {
+                    display: grid !important;
+                    grid-template-columns: repeat(2, 1fr);
+                    grid-template-rows: repeat(2, 1fr);
+                }
+
+            }
+        }
+
         .weather {
             flex: 2;
             display: flex;
@@ -327,6 +361,14 @@ body {
                 display: flex;
                 flex-direction: column;
                 gap: var(--space-4);
+
+                @media(max-width: 576px) {
+                    &__content {
+                        flex-wrap: wrap;
+                        justify-content: space-between;
+                    }
+
+                }
 
                 >h3 {
                     margin: 0;
